# The_WardenV2

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  wardenSetup.py
agents/: README.md  __init__.py  base_agent.py
api/middleware/: __init__.py
config/: __init__.py  settings.py
core/: __init__.py  orchestrator.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  workflows.md
intelligence/: README.md
intelligence/providers/: __init__.py
llm/prompt_templates/: __init__.py
mcp_servers/: README.md
mcp_servers/tools/: __init__.py
memory/: README.md  __init__.py  redis_store.py
reports/formatters/: __init__.py
reports/templates/: __init__.py
workflows/: README.md  __init__.py
